--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,13 +7,8 @@ galaxy_info:
   platforms:
   - name: Debian
     versions:
-      - jessie
-      - stretch
       - buster
-  - name: Ubuntu
-    versions:
-      - trusty
-      - xenial
-      - bionic
+      - bullseye
+      - bookworm
   galaxy_tags:
     - server
