Removed locales and timezone tasks now handled via debconf

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,13 +3,6 @@
 LC_CHANGE_HOSTNAME: False
 LC_CLOUD_INIT_PRESERVE_HOSTNAME: False
 LC_CLOUD_INIT_PRESERVE_SOURCES_LIST: False
-LC_CHANGE_TIMEZONE: False
-LC_TIMEZONE: ""
-LC_SET_LOCALES: False
-LC_LOCALES: []
-LC_DEFAULT_LOCALE: ""
-LC_SET_DEBCONF_VALUES: False
-LC_DEBCONF_VALUES: []
 LC_SETUP_SUDO: False
 LC_CHANGES_APT_DEFAULT_SOURCES_LIST: True
 LC_ENABLE_APT_BACKPORTS: False
@@ -28,6 +21,7 @@ LC_ENABLE_SRC_REPOS: False
 LC_REMOVE_EXIM: True
 LC_REBOOT: False
 LC_REBOOT_TIMEOUT: 120
+LC_PACKAGES_DEBCONF: []
 LC_EXTRA_PACKAGES: []
 LC_SETUP_THIRD_PARTY_REPOS: False
 LC_THIRD_PARTY_REPOS_KEYS:
